manifests/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: msostream
      name: backend
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: msostream
        name: backend
        tier: backend
        track: stable
    spec:
      containers:
      - name: backend
        image: finnrg/backend:latest
        ports:
        - name: http
          containerPort: 80
