manifests/stream.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stream
spec:
  selector:
    matchLabels:
      name: stream
      tier: backend
      track: stable
  replicas: 2
  template:
    metadata:
      labels:
        app: msostream
        name: stream
        tier: backend
        track: stable
    spec:
      containers:
      - name: stream
        image: finnrg/msostream-stream:latest
        ports:
        - name: http
          containerPort: 80
