manifests/api-video.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-video
spec:
  selector:
    matchLabels:
      name: api-video
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: videos
        name: api-video
        tier: backend
        track: stable
    spec:
      containers:
      - name: auth
        image: finnrg/msostream-api-video:latest
        imagePullPolicy: Always
        ports:
        - name: rpc
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api-video
spec:
  selector:
    name: api-video
    app: videos
    tier: backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: rpc
