manifests/auth.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  selector:
    matchLabels:
      name: auth
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: auth
        name: auth
        tier: backend
        track: stable
    spec:
      containers:
      - name: auth
        image: finnrg/msostream-auth:latest
        imagePullPolicy: Always
        ports:
        - name: rpc
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  selector:
    name: auth
    app: auth
    tier: backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: rpc
