manifests/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: msostream
spec:
  selector:
    app: msostream
    tier: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
