manifests/gate.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gate
spec:
  selector:
    matchLabels:
      name: gate
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: gate
        name: gate
        tier: backend
        track: stable
    spec:
      containers:
      - name: gate
        image: finnrg/msostream-gate:latest
        imagePullPolicy: Always
        ports:
        - name: rpc
          containerPort: 50051
        - name: http
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gate
spec:
  selector:
    name: gate
    app: gate
    tier: backend
  ports:
  - protocol: TCP
    port: 50051
    targetPort: rpc
  - protocol: TCP
    port: 8080
    targetPort: http
