manifests/proxy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
spec:
  selector:
    matchLabels:
      name: proxy
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: proxy
        name: proxy
        tier: backend
        track: stable
    spec:
      containers:
      - name: proxy
        image: finnrg/msostream-proxy:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 7778
---
apiVersion: v1
kind: Service
metadata:
  name: proxy
spec:
  selector:
    name: proxy
    app: proxy
    tier: backend
  ports:
  - protocol: TCP
    port: 7778
    targetPort: http
