manifests/search.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search
spec:
  selector:
    matchLabels:
      name: search
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: search
        name: search
        tier: backend
        track: stable
    spec:
      containers:
      - name: search
        image: finnrg/msostream-search:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: search
spec:
  selector:
    name: search
    app: search
    tier: backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: http
