manifests/stream-service.yml
apiVersion: v1
kind: Service
metadata:
  name: stream
spec:
  selector:
    name: stream
    app: msostream
    tier: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
