manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontend
  annotations:
    dev.okteto.com/generate-host: "true"
spec:
  rules:
  - host: msostream.live
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-backend
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://msostream.live, http://localhost:3000"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type,authorization,x-grpc-web,grpc-timeout,keep-alive,user-agent,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,range"
    nginx.ingress.kubernetes.io/cors-expose-headers: "Content-Type,authorization,grpc-encoding,grpc-message,grpc-status"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/enable-modsecurity: "false"
spec:
  rules:
  - host: api.msostream.live
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: proxy
            port:
              number: 8080
      - path: /upload
        pathType: Prefix
        backend:
          service:
            name: upload
            port:
              number: 8080
      - path: /stream
        pathType: Prefix
        backend:
          service:
            name: stream
            port:
              number: 8080
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dashboard
  namespace: observability
  annotations:
    dev.okteto.com/generate-host: "true"
spec:
  rules:
  - host: dashboard.msostream.live
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
  ingressClassName: nginx
